--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         .flex-row{
             display:flex;
-
+            flex-direction: column;;
         }
         #canvasHolder{
             margin-right: 16px;
